# zeromcp-python

./: README.md  pyproject.toml
antidrift_zeromcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/tools/: add.py  create_invoice.py  hello.py
tests/: test_audit.py  test_config.py  test_dispatch.py  test_e2e.py  test_pagination.py  test_prompts.py  test_resources.py  test_schema.py  test_schema_extended.py  test_template.py
tests/fixtures/prompts/: greeting.py  simple.py
tests/fixtures/resources/: config.json  dynamic.py  readme.md  user_profile.py
tests/fixtures/tools/: echo.py
zeromcp/: __init__.py  __main__.py  audit.py  config.py  sandbox.py  scanner.py  schema.py  server.py
